feat: 优化项目配置和文档
- 优化 .gitignore 文件，忽略日志、文件存储、临时文件等
- 重新编写 README.md，简化内容并突出核心功能
- 添加 LibreOffice 安装和远程启动配置说明
- 完善 JODConverter 远程连接模式配置
- 新增文件预览功能和相关测试
- 优化表格组件和页面布局